--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="game">
-        <div class="scroe"></div>
+        <div class="score"></div>
         <div class="start">Чтобы начать, кликни на меня</div>
         <div class="gameArea"></div>
     </div>
