--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="game">
         <div class="score"></div>
-        <div class="start"><p>Click to START Game</p></div>
+        <div class="start">Click to START Game</div>
         <div class="gameArea"></div>
     </div>
 
