--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <div class="score"></div>
         <div class="start">Click to START Game</div>
         <div class="gameArea"></div>
+        <div class="playMusic">
+            <!--<embed src="./1.mp3" autostart=true loop=false>-->
+                <audio class="Player" controls autoplay loop hidden>
+                    <source class="music" src="1.mp3" type="audio/mpeg">
+                </audio>
+        </div>
     </div>
 
     <script src="main.js"></script>
