--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 <body>
     <div class="game">
         <div class="score"></div>
+        <div class="selectDifficulty">
+            <select class="selectedDifficulty" onchange="selected()">
+                <option value="1">Easy</option>
+                <option value="5">Normal</option>
+                <option value="10">Hard</option>
+            </select>
+        </div>
         <div class="start">Click to START Game</div>
         <div class="gameArea"></div>
-        <div class="playMusic">
-            <!--<embed src="./1.mp3" autostart=true loop=false>-->
-                <audio class="Player" controls autoplay loop hidden>
-                    <source class="music" src="1.mp3" type="audio/mpeg">
-                </audio>
-        </div>
+<!--        <div class="playMusic">-->
+<!--                <audio class="Player" controls autoplay loop hidden>-->
+<!--                    <source class="music" src="1.mp3" type="audio/mpeg">-->
+<!--                </audio>-->
+<!--        </div>-->
     </div>
 
     <script src="main.js"></script>
